--- a/src/Component/CarCard.css
+++ b/src/Component/CarCard.css
@@ -72,7 +72,34 @@ p {
   font-weight: bold;
   color: #333;
   margin-bottom: 8px;
+  display: flex;
+  gap: 20px;
+
 }
+.heart-icon {
+  cursor: pointer;
+  display: inline-block;
+  transition: transform 0.2s ease-in-out;
+}
+
+.heart-icon:hover {
+  transform: scale(1.1);
+}
+
+.heart {
+  width: 20px;
+  height: 20px;
+  stroke: rgb(23, 22, 22); /* Outline color */
+  stroke-width: 2;
+  fill: transparent;
+  transition: fill 0.3s ease-in-out;
+}
+
+.heart.filled {
+  fill: red; /* Inside color when clicked */
+  stroke: red;
+}
+
 
 .car-card-details {
   font-size: 0.9rem;
@@ -82,6 +109,9 @@ p {
 
 .car-card-pricing {
   margin-bottom: 12px;
+  display: flex;
+  justify-content: space-between;
+  /* background-color: #007bff; */
 }
 
 .car-card-price {
