--- a/src/kansresto/style.css
+++ b/src/kansresto/style.css
@@ -77,13 +77,18 @@ input[type='text']::placeholder{
     border-radius: 10px;
     flex: 0.4 ;
     margin-left: 10px;
-    /* opacity: 40%; */
+    display: flex;
+    flex-direction: column;
+    /* gap: 15px; */
+    /* padding: 5px; */
   }
   .customerinf2{
     background-color: rgb(237, 237, 237);
     border-radius: 10px;
     flex: 0.4 ;
     margin-left: 10px;
+    display: flex;
+    flex-direction: column;
     /* opacity: 40%; */
   }
 .sub1 h3{
