--- a/src/kansresto/style.css
+++ b/src/kansresto/style.css
@@ -54,7 +54,7 @@ input[type='text']::placeholder{
 }
 .right{
     background-color: white;
-    flex:1.2;
+    flex:1;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -75,21 +75,43 @@ input[type='text']::placeholder{
 .customerinf1{
     background-color: rgb(237, 237, 237);
     border-radius: 10px;
-    flex: auto ;
+    flex: 1 ;
     margin-left: 10px;
     display: flex;
     flex-direction: column;
-    /* gap: 15px; */
-    /* padding: 5px; */
+   padding-left: 5px;
+   padding-bottom: 12px;
+    
   }
+  .customerinf1 p{
+    color: rgb(167, 174, 180);
+    margin-bottom: 0;
+  }
+  
   .customerinf2{
+    padding-left: 5px;
+    padding-bottom: 12px;
     background-color: rgb(237, 237, 237);
     border-radius: 10px;
     flex: 0.4 ;
     margin-left: 10px;
     display: flex;
-    flex-direction: column;
-    /* opacity: 40%; */
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+  }
+  .customerinf2 .quantity-btn{
+    width: 30px;
+    height: 30px;
+    margin-top: 5px;
+  }
+  .customerinf2 .quantity-controls{
+    padding-right: 5px;
+  }
+  .customerinf2 p{
+    color: rgb(167, 174, 180);
+    margin-bottom: 0;
   }
 .sub1 h3{
   margin-bottom: 0;
