--- a/src/kansresto/style.css
+++ b/src/kansresto/style.css
@@ -150,9 +150,36 @@ h3{
 
 }
 .special1{
-    background-color: white;
+    /* background-color: white; */
     border-radius: 10px;
-    flex:0.7;
+    flex:0.5;
+    display: flex;
+    flex-direction: column;
+}
+.mainh1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.procontainer{
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  gap: 10px;
+}
+.procards{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  border: 1px solid rgb(231, 230, 230);
+  border-radius: 12px;
+  background-color: white;
+}
+.procards img{
+  object-fit: cover;
+  width: 210px;
+  height: 150px;
+  margin: 10PX;
 }
 .special2{
     background-color: white;
