--- a/src/justdial/justdial.css
+++ b/src/justdial/justdial.css
@@ -8,7 +8,7 @@ body{
 .container1{
     /* background-color: aquamarine; */
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     display: flex;
     flex-direction: column;
     border-radius: 20px;
@@ -20,7 +20,7 @@ body{
     flex:0.1;
 }
 .main{
-    background-color: bisque;
+    /* background-color: bisque; */
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -28,12 +28,51 @@ body{
     gap: 10px;
 }
 .features{
-    background-color: orange;
+    /* border: 1px solid rgb(227, 225, 225); */
     flex: 1;
     border-radius: 12px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+    gap: 10px;
+
+}
+.feat{
+    border: 1px solid rgb(227, 225, 225);
+    width: 200px;
+    height: 200px;
 }
 .details{
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
+    flex: 1;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+    justify-content: center;
+}
+.cards{
+    border: 1px solid rgb(227, 225, 225);
+    background-color:white;
+    width: 700px;
+    border-radius: 12px;
+    box-shadow: 2px 0 2px 1px rgb(227, 227, 223);
+    
+}
+.services{
+    /* border: 1px solid rgb(227, 225, 225); */
+    flex: 1;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.service-cards{
+    border: 1px solid rgb(227, 225, 225);
     flex: 1;
     border-radius: 12px;
 }
