--- a/src/kansresto/style.css
+++ b/src/kansresto/style.css
@@ -145,7 +145,7 @@ h3{
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    /* gap: 10px; */
     /* padding: 10px;*/
 
 }
@@ -176,11 +176,9 @@ h3{
   background-color: white;
 }
 .procards img{
-  object-fit: cover;
-  width: 210px;
-  height: 150px;
-  margin: 10PX;
-}
+  width: 100%;
+  height: 180px;
+  object-fit: cover;}
 .special2{
     background-color: white;
     border-radius: 10px;
