--- a/src/FoodSlice/style.css
+++ b/src/FoodSlice/style.css
@@ -11,8 +11,21 @@ body {
     display: flex;
     flex-direction: row;
     width: 100%;
-    background-color: #e65c00;
+    /* background-color: #e65c00; */
   }
+  .main-content{
+    /* background-color: #e65c00; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+  }
+  /* .prolist{
+    background-color: aqua;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  } */
   
   /* Navbar
   .nav-bar {
