--- a/src/Wearup/wearup.css
+++ b/src/Wearup/wearup.css
@@ -1,52 +1,34 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: #333;
-    line-height: 1.5;
-  }
-  
-  input, button {
-    font-family: inherit;
-  }
-.app {
-    min-height: 100vh;
-    background-color: #f5f5f5;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .main-content {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.app{
     width: 100%;
-    /* margin: 0 auto; */
-    padding: 2rem;
+    height: 100vh;
+    /* background-color: aquamarine;  */
     display: flex;
-    /* flex-wrap: wrap; */
-    gap: 2rem;
-    background-color: aquamarine;
+    flex-direction: column ;
+    /* padding: 10px; */
+    gap: 10px;
+}
+.row1{
+    background-color: bisque;
+    flex: 0.4;
+}
+.row2{
+    background-color: bisque;
+    flex: 3;
+    display: flex;
     flex-direction: row;
-  }
-  
-  .main-content > * {
-    flex: 1 1 calc(50% - 1rem);
-    min-width: 300px;
-  }
-  
-  @media (max-width: 1024px) {
-    .main-content {
-      padding: 1rem;
-      gap: 1rem;
-    }
-  }
-  
-  @media (max-width: 768px) {
-    .main-content > * {
-      flex: 1 1 100%;
-    }
-  }
+    gap: 10px;
+}
+.sub1{
+    background-color:white;
+    flex: 1;
+}
+.sub2{
+    background-color:white;
+    flex: 1;
+}
