--- a/src/Wearup/wearup.css
+++ b/src/Wearup/wearup.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
-
+body{
+    background-color: white;
+}
 .app{
     width: 100%;
     height: 100vh;
@@ -11,24 +14,24 @@
     display: flex;
     flex-direction: column ;
     /* padding: 10px; */
-    gap: 10px;
+    /* gap: 10px; */
 }
 .row1{
-    background-color: bisque;
+    background-color: white;
     flex: 0.4;
 }
 .row2{
-    background-color: bisque;
+    /* background-color: bisque; */
     flex: 3;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    /* gap: 10px; */
 }
 .sub1{
     background-color:white;
     flex: 1;
 }
 .sub2{
-    background-color:white;
+    /* background-color:white; */
     flex: 1;
 }
