--- a/src/pateientmange/patient.css
+++ b/src/pateientmange/patient.css
@@ -42,6 +42,7 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
+    gap: 40px;
 }
 .pdetail{
     flex: 3;
@@ -59,7 +60,21 @@
 }
 .pcatogories{
     flex: .5;
+    display: flex;
+    border-radius: 10px;
     /* background-color: aquamarine; */
+}
+.subcat{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: rgb(206, 207, 209);
+}
+.subcat:hover{
+    background-color: white;
+    
 }
 .plist{
     flex: 3;
